--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
     </footer>
 
-    <script src="/scripts/script.js"></script>
-    <script src="/scripts/theme-switcher.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/theme-switcher.js"></script>
   </body>
 </html>
